2006-12-04  Emmanuele Bassi  <ebassi@openedhand.com>

	* xs/ClutterMedia.xs: Add the perl machinery needed
	in order to implement a Clutter::Media interface in
	pure perl.

	* xs/ClutterBehaviourPath.xs: Wrap ClutterKnot as
	an array of two elements; unwrap it from either an
	array or an hash references. This allows us to use
	the object created using the Clutter::Knot::new()
	constructor or to use perl native objects for brevity.

	Bind the clutter_knot_equal() function as a class
	method.

	Require an array of knots instead of an array
	reference in both the Clutter::Behavior::Path
	constructor and the add_knot() method.

	* t/ClutterBehaviourPath.t: Update the test suite.

	* Clutter.pm: Overload '==' for the Clutter::Knot
	object, using the equal() class method.

2006-12-04  Emmanuele Bassi  <ebassi@openedhand.com>

	* Clutter.pm: Add the difference from the C library
	to the Perl bindings to the Clutter pod.

	* examples/behave.pl: Add a bit of padding to the
	texture.

	* xs/ClutterBehaviourPath.xs: Collapse the add_knots()
	and add_knot() Clutter::Behaviour::Path methods into
	a single Clutter::Behaviour::Path::add_knot(), which
	accepts an array of Clutter::Knot objects.

2006-12-03  Emmanuele Bassi  <ebassi@openedhand.com>

	A examples/behaviour.pl
	A examples/redhand.png

	* examples/behaviour.pl: Add an example for the new
	behaviour API.

	* xs/ClutterAlpha.xs: Add symbolic name for the
	CLUTTER_ALPHA_MAX_ALPHA C macro.

	* xs/ClutterBehaviourOpacity.xs:
	* xs/ClutterBehaviourScale.xs: Allow passing undef
	as the Clutter::Alpha object.

	* Clutter.pm: Add pure perl implementation of the
	convenience alpha functions.

2006-12-03  Emmanuele Bassi  <ebassi@openedhand.com>

	A t/ClutterBehaviourPath.t

	* Makefile.PL: Clean up.

	* xs/ClutterBehaviourPath.xs: Allow passing undef as
	alpha object and knots inside the constructor; bind
	the remaining missing functions:

		clutter_behaviour_path_get_knots
		clutter_behaviour_path_clear

	* MANIFEST: