@@ -297,48 +297,3 @@ new (class, x, y)
     OUTPUT:
         RETVAL
 
-=for apidoc Clutter::Knot::x
-=for signature integer = $knot->x
-=for signature oldvalue = $knot->x ($newvalue)
-=for arg newvalue (integer)
-=cut
-
-=for apidoc Clutter::Knot::y
-=for signature integer = $knot->y
-=for signature oldvalue = $knot->y ($newvalue)
-=for arg newvalue (integer)
-=cut
-
-gint
-x (ClutterKnot *knot, SV *newvalue = 0)
-    ALIAS:
-        Clutter::Knot::y = 1
-    CODE:
-        switch (ix) {
-		case 0: RETVAL = knot->x; break;
-		case 1: RETVAL = knot->y; break;
-		default:
-			RETVAL = 0;
-			g_assert_not_reached ();
-	}
-	if (newvalue) {
-	        switch (ix) {
-			case 0: knot->x = SvIV (newvalue); break;
-			case 1: knot->y = SvIV (newvalue); break;
-			default:
-				g_assert_not_reached ();
-		}
-	}
-    OUTPUT:
-        RETVAL
-
-=for apidoc
-=for signature (x, y) = $knot->values
-=cut
-void
-values (ClutterKnot *knot)
-    PPCODE:
-        EXTEND (SP, 2);
-	PUSHs (sv_2mortal (newSViv (knot->x)));
-	PUSHs (sv_2mortal (newSViv (knot->y)));
-
